--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,5 +19,12 @@ jobs:
         node-version: [12.x]
 
     steps:
-      - run: npm install
-      - run: npm test
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
